image on mobile fix, carousel caption removal

--- a/src/css/project.css
+++ b/src/css/project.css
@@ -18,3 +18,7 @@
 .github:hover {
     color: #D97925;
 }
+
+.jumbotron img {
+    max-width: 100%
+}
